rewrote a bit to use older API